--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,11 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    env:
+      SSH_USER: "webdata"  # replace with the actual SSH user
+      SSH_HOST: "18.206.91.6"   # replace with the actual IP of your server
+      TARGET_PATH: "/var/www/html/test"  # replace with the actual target path
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -21,5 +26,6 @@ jobs:
 
       - name: Copy wp-content to server
         run: |
-          scp -o StrictHostKeyChecking=no -r wp-content ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.TARGET_PATH }}
+          #scp -o StrictHostKeyChecking=no -r wp-content ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.TARGET_PATH }}
+          scp -o StrictHostKeyChecking=no -r wp-content $SSH_USER@$SSH_HOST:$TARGET_PATH
 
