--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_KEY }}
 
       - name: Copy wp-content to server
-        run: |
+        command: |
           #scp -o StrictHostKeyChecking=no -r wp-content ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.TARGET_PATH }}
           #scp -o StrictHostKeyChecking=no -r wp-content $SSH_USER@$SSH_HOST:$TARGET_PATH
           cd $TARGET_PATH
