--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,8 @@ jobs:
           private_key: ${{secrets.SSH_KEY}}
           command: |
             cd $TARGET_PATH
+            git pull
+
 
 
         #https://github.com/webfactory/ssh-agent
