--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,8 @@ jobs:
           private_key: ${{secrets.SSH_KEY}}
           command: |
             cd /var/www/html/test/test
-            git pull
+            git pull origin main
+
 
 
 
